--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "## Description",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "node server.js"
   },
   "repository": {
     "type": "git",
@@ -22,5 +23,6 @@
     "express": "^4.18.2",
     "mysql2": "^3.2.3",
     "sequelize": "^6.31.0"
-  }
+  },
+  "devDependencies": {}
 }
